crates/parsing/src/grammar/snapshots/grammar_tests__expect_parse@forall-mixed.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/type/forall-mixed.input
---
Input: forall a (b :: C) @d (@e :: F). Type

Start { kind: ForallType }
  Token { kind: ForallKw }
  Start { kind: OneOrMore }
    Start { kind: TypeVariableBinding }
      Start { kind: Prefixed }
        Start { kind: Name }
          Token { kind: Lower }
        Finish
      Finish
    Finish
    Start { kind: TypeVariableBinding }
      Start { kind: Wrapped }
        Token { kind: LeftParenthesis }
        Start { kind: Labeled }
          Start { kind: Prefixed }
            Start { kind: Name }
              Token { kind: Lower }
            Finish
          Finish
          Token { kind: Colon2 }
          Start { kind: ConstructorType }
            Start { kind: QualifiedName }
              Start { kind: NameRef }
                Token { kind: Upper }
              Finish
            Finish
          Finish
        Finish
        Token { kind: RightParenthesis }
      Finish
    Finish
    Start { kind: TypeVariableBinding }
      Start { kind: Prefixed }
        Token { kind: At }
        Start { kind: Name }
          Token { kind: Lower }
        Finish
      Finish
    Finish
    Start { kind: TypeVariableBinding }
      Start { kind: Wrapped }
        Token { kind: LeftParenthesis }
        Start { kind: Labeled }
          Start { kind: Prefixed }
            Token { kind: At }
            Start { kind: Name }
              Token { kind: Lower }
            Finish
          Finish
          Token { kind: Colon2 }
          Start { kind: ConstructorType }
            Start { kind: QualifiedName }
              Start { kind: NameRef }
                Token { kind: Upper }
              Finish
            Finish
          Finish
        Finish
        Token { kind: RightParenthesis }
      Finish
    Finish
  Finish
  Token { kind: Period }
  Start { kind: ConstructorType }
    Start { kind: QualifiedName }
      Start { kind: NameRef }
        Token { kind: Upper }
      Finish
    Finish
  Finish
Finish

