crates/parsing/src/grammar/snapshots/grammar_tests__expect_parse@invalid-record-field.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/failing/expression/invalid-record-field.input
---
Input: { 1: "hello" }

Start { kind: LiteralExpression }
  Start { kind: LiteralRecord }
    Token { kind: LeftCurly }
    Start { kind: Separated }
      Start { kind: RecordField }
        Start { kind: Error }
          Error { message: "expected a label" }
        Finish
        Token { kind: Colon }
        Start { kind: LiteralExpression }
          Token { kind: LiteralString }
        Finish
      Finish
    Finish
    Token { kind: RightCurly }
  Finish
Finish

