crates/parsing/src/grammar/snapshots/grammar_tests__expect_parse@kinded-variable.input.snap
---
source: crates/parsing/tests/grammar_tests.rs
expression: result
input_file: crates/parsing/tests/inputs/passing/type/kinded-variable.input
---
Input: ((a) :: Int)

Start { kind: ParenthesizedType }
  Token { kind: LeftParenthesis }
  Start { kind: KindedType }
    Start { kind: ParenthesizedType }
      Token { kind: LeftParenthesis }
      Start { kind: VariableType }
        Start { kind: NameRef }
          Token { kind: Lower }
        Finish
      Finish
      Token { kind: RightParenthesis }
    Finish
    Token { kind: Colon2 }
    Start { kind: ConstructorType }
      Start { kind: QualifiedName }
        Start { kind: NameRef }
          Token { kind: Upper }
        Finish
      Finish
    Finish
  Finish
  Token { kind: RightParenthesis }
Finish

